--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -18,15 +18,19 @@
 	--navigation-bar-elements-padding: 0rem 4rem 0rem 4rem;
 }
 
-#main {
-	background-color: var(--main-background-color-dark);
+body,
+html {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-#main_content {
-	padding-left: 20rem;
-	padding-right: 20rem;
-	font-family: var(--content-font-family), sans-serif;
-	color: var(--main-content-color-dark);
+#main {
+	height: 100vh;
+	background-color: var(--main-background-color-dark);
+	/* Alignment */
+	display: flex;
+	flex-flow: column nowrap;
 }
 
 #main_title {
@@ -34,9 +38,47 @@
 	text-align: center;
 	font-size: var(--main-title-font-size);
 	color: var(--main-title-color-dark);
+
+	/* Alignment */
+	order: 1;
+	flex: 1;
 }
 
-.navigation-bar {
+#main_content__container {
+	/* padding-left: 20rem;
+	padding-right: 20rem; */
+	font-family: var(--content-font-family), sans-serif;
+	color: var(--main-content-color-dark);
+	background-color: var(--main-background-color-dark);
+
+	/* Alignment */
+	order: 2;
+	flex: 10;
+
+	/* New Container */
+	display: flex;
+}
+
+#content_container__sidebar {
+	/* Alignment */
+	order: 1;
+	flex: 1;
+}
+
+#main_content {
+	background-color: var(--main-background-color-dark);
+	/* Alignment */
+	order: 2;
+	flex: 4;
+}
+
+#content_container__leftover {
+	/* Alignment */
+	order: 3;
+	flex: 1;
+}
+
+#navigation-bar {
 	font-family: var(--title-font-family), cursive;
 	color: var(--main-title-color-dark);
 	font-size: var(--small-title-font-size);
@@ -45,9 +87,13 @@
 	background-color: var(--main-background-color-dark);
 	padding: var(--navigation-bar-padding);
 	bottom: 0;
+
+	/* Alignment */
+	order: 3;
+	flex: 1;
 }
 
-.navigation-bar > span {
+#navigation-bar > span {
 	padding: var(--navigation-bar-elements-padding);
 	cursor: pointer;
 }
@@ -73,13 +119,10 @@
 	background-color: var(--main-sidebar-color-blue);
 }
 
-sidebar-nav-list {
+.sidebar-nav-list {
 	list-style-type: none;
 	padding: 0;
 	margin: 0;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
 }
 
 .sidebar-nav-list:last-child {
