--- a/public/templates/newsContent.html
+++ b/public/templates/newsContent.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <div id="main_content__news" >News</div>
+    <div id="main_content__news" >
+        <p>
+            News
+        </p>
+    </div>
 </html>
