--- a/public/templates/sidebarContents.html
+++ b/public/templates/sidebarContents.html
@@ -1,54 +1,64 @@
 <!DOCTYPE html>
 <html>
-<body>
-    <div class="sidebar_home_content">
-        <ul class="sidebar-nav-list">
-          <li class="sidebar-item">
-            <a href="#" class="sidebar-link"
-              >A1 <i class="fa fa-free-code-camp"></i
-            ></a>
-          </li>
-          <li class="sidebar-item">
-            <a href="#" class="sidebar-link">A2 <i class="fa fa-beer"></i></a>
-          </li>
-          <li class="sidebar-item">
-            <a href="#" class="sidebar-link">A3 <i class="fa fa-bug"></i></a>
-          </li>
-        </ul>
-      </div>
-      <div class="sidebar_notice_content">
-        <ul class="sidebar-nav-list">
-          <li class="sidebar-item">
-            <a href="#" class="sidebar-link"
-              >B1 <i class="fa fa fa-newspaper-o"></i
-            ></a>
-          </li>
-          <li class="sidebar-item">
-            <a href="#" class="sidebar-link"
-              >B2 <i class="fa fa-file-text"></i
-            ></a>
-          </li>
-          <li class="sidebar-item">
-            <a href="#" class="sidebar-link"
-              >B3 <i class="fa fa-external-link"></i
-            ></a>
-          </li>
-        </ul>
-      </div>
-      <div class="sidebar_proyects_content">
-        <ul class="sidebar-nav-list">
-          <li class="sidebar-item">
-            <a href="#" class="sidebar-link">C1 <i class="fa fa-book"></i></a>
-          </li>
-          <li class="sidebar-item">
-            <a href="#" class="sidebar-link"
-              >C2 <i class="fa fa-file-text"></i
-            ></a>
-          </li>
-          <li class="sidebar-item">
-            <a href="#" class="sidebar-link">C3 <i class="fa fa-file-o"></i></a>
-          </li>
-        </ul>
-      </div>
-</body>
+	<body>
+		<div id="allbarside">
+			<div id="sidebar_home_content">
+				<ul class="sidebar-nav-list">
+					<li class="sidebar-item">
+						<a href="#" class="sidebar-link"
+							>A1 <i class="fa fa-free-code-camp"></i
+						></a>
+					</li>
+					<li class="sidebar-item">
+						<a href="#" class="sidebar-link"
+							>A2 <i class="fa fa-beer"></i
+						></a>
+					</li>
+					<li class="sidebar-item">
+						<a href="#" class="sidebar-link"
+							>A3 <i class="fa fa-bug"></i
+						></a>
+					</li>
+				</ul>
+			</div>
+			<div id="sidebar_notice_content">
+				<ul class="sidebar-nav-list">
+					<li class="sidebar-item">
+						<a href="#" class="sidebar-link"
+							>B1 <i class="fa fa fa-newspaper-o"></i
+						></a>
+					</li>
+					<li class="sidebar-item">
+						<a href="#" class="sidebar-link"
+							>B2 <i class="fa fa-file-text"></i
+						></a>
+					</li>
+					<li class="sidebar-item">
+						<a href="#" class="sidebar-link"
+							>B3 <i class="fa fa-external-link"></i
+						></a>
+					</li>
+				</ul>
+			</div>
+			<div id="sidebar_proyects_content">
+				<ul class="sidebar-nav-list">
+					<li class="sidebar-item">
+						<a href="#" class="sidebar-link"
+							>C1 <i class="fa fa-book"></i
+						></a>
+					</li>
+					<li class="sidebar-item">
+						<a href="#" class="sidebar-link"
+							>C2 <i class="fa fa-file-text"></i
+						></a>
+					</li>
+					<li class="sidebar-item">
+						<a href="#" class="sidebar-link"
+							>C3 <i class="fa fa-file-o"></i
+						></a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</body>
 </html>
