Small fixes on readability

--- a/public/templates/contact.html
+++ b/public/templates/contact.html
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<body>
-    <div>
-        
-    </div>
-    <style>
+<template>
 
-    </style>
-</body>
-</html>
+</template>
