--- a/public/templates/contactContent.html
+++ b/public/templates/contactContent.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-
+<template>
+    
     <h2>Contáctanos</h2>
     <p>Críticas, comentarios, mentadas dirigidas a Alberto:</p>
   
@@ -25,6 +18,4 @@
         <textarea id="subject" name="subject" placeholder="Escribe algo.." style="height:170px"></textarea>
         <input type="submit" value="Mandar">
       </form>
-    
-</body>
-</html>
+</template>
