--- a/public/templates/contactContent.html
+++ b/public/templates/contactContent.html
@@ -1,7 +1,7 @@
 <template>
     
     <h2>Contáctanos</h2>
-    <p>Críticas, comentarios, mentadas dirigidas a Alberto:</p>
+    <p>Críticas, comentarios</p>
   
       <form>
         <label for="fname">Nombre</label><br>
