Groupal changes at May 15th

--- a/public/templates/contactContent.html
+++ b/public/templates/contactContent.html
@@ -1,5 +1,5 @@
 <template>
-    
+  <div id="main-content__contact">
     <h2>Contáctanos</h2>
     <p>Críticas, comentarios</p>
   
@@ -18,4 +18,5 @@
         <textarea id="subject" name="subject" placeholder="Escribe algo.." style="height:170px"></textarea>
         <input type="submit" value="Mandar">
       </form>
+  </div>
 </template>
