--- a/public/templates/newsContent.html
+++ b/public/templates/newsContent.html
@@ -1,8 +1,4 @@
-<!DOCTYPE html>
-<html>
+<template>
     <div id="main_content__news" >
-        <p>
-            News
-        </p>
     </div>
-</html>
+</template>
