--- a/public/templates/contactContent.html
+++ b/public/templates/contactContent.html
@@ -10,8 +10,9 @@
         <input type="text" id="lname" name="lastname" placeholder="Tus apellidos.."><br>
         <label for="found">¿Cómo nos descubriste?</label><br>
         <select id="found" name="found">
+          <option value="" disabled selected hidden>Elige una opción..</option>
           <option value="perdido">Me perdí</option>
-          <option value="popup">Caí en uno de sus pop ups en un stream ilegal</option>
+          <option value="popup">Caí en uno de sus pop ups en un directo ilegal</option>
           <option value="rickroll">Rick Roll</option>
         </select><br>
         <label for="subject">Asunto</label><br>
