--- a/public/templates/homeContent.html
+++ b/public/templates/homeContent.html
@@ -1,268 +1,12 @@
 <template>
 	<div id="main_content__home">
 		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-			imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-			scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices
-			nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue
-			ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in
-			odio. Praesent convallis urna a lacus interdum ut hendrerit risus
-			congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim
-			ac. In at libero sed nunc venenatis imperdiet sed ornare turpis.
-			Donec vitae dui eget tellus gravida venenatis. Integer fringilla
-			congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta.
-			Cras ac leo purus.
-		</p>
-
-		<p>
-			Mauris quis diam velit. Lorem ipsum dolor sit amet, consectetur
-			adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi
-			lorem egestas odio, vitae scelerisque enim ligula venenatis dolor.
-			Maecenas nisl est, ultrices nec congue eget, auctor vitae massa.
-			Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula,
-			facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a
-			lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi,
-			sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis
-			imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-			venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-			pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam
-			velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-			Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas
-			odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl
-			est, ultrices nec congue eget, auctor vitae massa. Fusce luctus
-			vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed
-			ornare eu, lobortis in odio. Praesent convallis urna a lacus
-			interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed
-			ullamcorper ipsum dignissim ac.
-		</p>
-
-		<p>
-			In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec
-			vitae dui eget tellus gravida venenatis. Integer fringilla congue
-			eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac
-			leo purus. Mauris quis diam velit. Lorem ipsum dolor sit amet,
-			consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum
-			interdum, nisi lorem egestas odio, vitae scelerisque enim ligula
-			venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor
-			vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante
-			ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-			convallis urna a lacus interdum ut hendrerit risus congue. Nunc
-			sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at
-			libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae
-			dui eget tellus gravida venenatis.
-		</p>
-
-		<p>
-			Integer fringilla congue eros non fermentum. Sed dapibus pulvinar
-			nibh tempor porta. Cras ac leo purus. Mauris quis diam velit. Lorem
-			ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-			imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-			scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices
-			nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue
-			ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in
-			odio. Praesent convallis urna a lacus interdum ut hendrerit risus
-			congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim
-			ac. In at libero sed nunc venenatis imperdiet sed ornare turpis.
-			Donec vitae dui eget tellus gravida venenatis. Integer fringilla
-			congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta.
-			Cras ac leo purus. Mauris quis diam velit. Lorem ipsum dolor sit
-			amet, consectetur adipiscing elit.
-		</p>
-
-		<p>
-			Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas
-			odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl
-			est, ultrices nec congue eget, auctor vitae massa. Fusce luctus
-			vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed
-			ornare eu, lobortis in odio. Praesent convallis urna a lacus
-			interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed
-			ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis
-			imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-			venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-			pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam
-			velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-			Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas
-			odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl
-			est, ultrices nec congue eget, auctor vitae massa. Fusce luctus
-			vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed
-			ornare eu, lobortis in odio. Praesent convallis urna a lacus
-			interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed
-			ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis
-			imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-			venenatis. Integer fringilla congue eros non fermentum.
-		</p>
-
-		<p>
-			Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris
-			quis diam velit. Lorem ipsum dolor sit amet, consectetur adipiscing
-			elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem
-			egestas odio, vitae scelerisque enim ligula venenatis dolor.
-			Maecenas nisl est, ultrices nec congue eget, auctor vitae massa.
-			Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula,
-			facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a
-			lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi,
-			sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis
-			imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-			venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-			pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam
-			velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-			Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas
-			odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl
-			est, ultrices nec congue eget, auctor vitae massa. Fusce luctus
-			vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed
-			ornare eu, lobortis in odio. Praesent convallis urna a lacus
-			interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed
-			ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis
-			imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-			venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-			pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam
-			velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-			Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas
-			odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl
-			est, ultrices nec congue eget, auctor vitae massa. Fusce luctus
-			vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed
-			ornare eu, lobortis in odio. Praesent convallis urna a lacus
-			interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed
-			ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis
-			imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-			venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-			pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam
-			velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-			Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas
-			odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl
-			est, ultrices nec congue eget, auctor vitae massa. Fusce luctus
-			vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed
-			ornare eu, lobortis in odio. Praesent convallis urna a lacus
-			interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed
-			ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis
-			imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-			venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-			pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam
-			velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-			Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas
-			odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl
-			est, ultrices nec congue eget, auctor vitae massa.
-		</p>
-
-		<p>
-			Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula,
-			facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a
-			lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi,
-			sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis
-			imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-			venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-			pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam
-			velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-			Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas
-			odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl
-			est, ultrices nec congue eget, auctor vitae massa. Fusce luctus
-			vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed
-			ornare eu, lobortis in odio. Praesent convallis urna a lacus
-			interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed
-			ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis
-			imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-			venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-			pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam
-			velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-			Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas
-			odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl
-			est, ultrices nec congue eget, auctor vitae massa. Fusce luctus
-			vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed
-			ornare eu, lobortis in odio. Praesent convallis urna a lacus
-			interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed
-			ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis
-			imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-			venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-			pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam
-			velit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-			Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas
-			odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl
-			est, ultrices nec congue eget, auctor vitae massa. Fusce luctus
-			vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed
-			ornare eu, lobortis in odio. Praesent convallis urna a lacus
-			interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed
-			ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis
-			imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-			venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-			pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam
-			velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-			Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas
-			odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl
-			est, ultrices nec congue eget, auctor vitae massa. Fusce luctus
-			vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed
-			ornare eu, lobortis in odio. Praesent convallis urna a lacus
-			interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed
-			ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis
-			imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-			venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-			pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam
-			velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-			Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas
-			odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl
-			est, ultrices nec congue eget, auctor vitae massa. Fusce luctus
-			vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed
-			ornare eu, lobortis in odio. Praesent convallis urna a lacus
-			interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed
-			ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis
-			imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-			venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-			pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam
-			velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-			Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas
-			odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl
-			est, ultrices nec congue eget, auctor vitae massa. Fusce luctus
-			vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed
-			ornare eu, lobortis in odio. Praesent convallis urna a lacus
-			interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed
-			ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis
-			imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-			venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-			pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam
-			velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-			Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas
-			odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl
-			est, ultrices nec congue eget, auctor vitae massa. Fusce luctus
-			vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed
-			ornare eu, lobortis in odio. Praesent convallis urna a lacus
-			interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed
-			ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis
-			imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-			venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-			pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam
-			velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-			Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas
-			odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl
-			est, ultrices nec congue eget, auctor vitae massa. Fusce luctus
-			vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed
-			ornare eu, lobortis in odio. Praesent convallis urna a lacus
-			interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed
-			ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis
-			imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-			venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-			pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam
-			velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-			Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas
-			odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl
-			est, ultrices nec congue eget, auctor vitae massa. Fusce luctus
-			vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed
-			ornare eu, lobortis in odio. Praesent convallis urna a lacus
-			interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed
-			ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis
-			imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-			venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-			pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam
-			velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-			Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas
-			odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl
-			est, ultrices nec congue eget, auctor vitae massa. Fusce luctus
-			vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed
-			ornare eu, lobortis in odio. Praesent convallis urna a lacus
-			interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed
-			ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis
-			imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-			venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-			pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam
-			velit.
+			El <span id="colective-mention" >Colectivo Anagrama</span> es una iniciativa cuyo propósito es
+			consolidarse como un frente de investigación e inovación en el
+			desarrollo de soluciones tecnológicas. Somos un grupo de
+			programadores y matemáticos que hace uso de recursos académicos y de
+			acceso libre para poder compartir ideas y proyectos que den solución
+			a problemas de diversa índole.
 		</p>
 	</div>
 </template>
