Path to RSS Stories Completed

--- a/public/templates/rss/feedItem.html
+++ b/public/templates/rss/feedItem.html
@@ -1,5 +1,14 @@
 <template>
-    <div class="feed-item" >
-        <div></div>
-    </div>
+	<div class="feed-item">
+		<div class="feed-badge">
+			<div class="feed-badge__form">
+				<div class="feed-badge__text" ></div>
+			</div>
+		</div>
+		<div class="feed-detail">
+			<div class="feed-title"></div>
+			<a class="feed-link" >  </a>
+			<div class="feed-description"></div>
+		</div>
+	</div>
 </template>
