--- a/public/templates/rss/storyItem.html
+++ b/public/templates/rss/storyItem.html
@@ -1,10 +1,19 @@
 <template>
-    <div class="story-item" > 
-        <div class="story-preview"> </div>
-        <div class="story-content">
-            <div class="story-title" > </div>
-            <div class="story-source" > </div>
-            <div class="story-content__intro" > </div>
-        </div>
-    </div>
+	<div class="story-item">
+		<div class="story-badge">
+			<div class="story-badge__form"> 
+                <div class="story-badge__icon fa fa-newspaper-o fa-3x" ></div>
+            </div>
+		</div>
+		<div class="story-detail">
+			<div class="story-title"></div>
+			<div class="story-link"></div>
+			<div class="story-meta">
+                <span class="story-author"></span>
+                &middot;
+				<span class="story-date"></span>
+			</div>
+			<div class="story-description"></div>
+		</div>
+	</div>
 </template>
