session 08-06-2020 first part

--- a/public/templates/hackersContent.html
+++ b/public/templates/hackersContent.html
@@ -1,8 +1,7 @@
 <template>
-    <h1>github</h1>
-    <button id="btnRepos">Repos</button>
-    <div id="divResult">
-        <script src="/public/modules/github.js"></script>
+	<div id="main_content_hackers">
+		<h1>github</h1>
+		<button id="btnRepos">Repos</button>
+        <div id="divResult"></div>
     </div>
-      
-<template>
+</template>
