--- a/public/templates/hackersContent.html
+++ b/public/templates/hackersContent.html
@@ -1,7 +1,7 @@
 <template>
-	<div id="main_content_hackers">
+	<div id="main-content__hackers">
 		<h1>github</h1>
 		<button id="btnRepos">Repos</button>
-        <div id="divResult"></div>
-    </div>
+		<div id="divResult"></div>
+	</div>
 </template>
