--- a/public/templates/homeContent.html
+++ b/public/templates/homeContent.html
@@ -1,12 +1,12 @@
 <template>
-	<div id="main_content__home">
+	<div id="main-content__home">
 		<p>
-			El <span id="colective-mention" >Colectivo Anagrama</span> es una iniciativa cuyo propósito es
-			consolidarse como un frente de investigación e inovación en el
-			desarrollo de soluciones tecnológicas. Somos un grupo de
-			programadores y matemáticos que hace uso de recursos académicos y de
-			acceso libre para poder compartir ideas y proyectos que den solución
-			a problemas de diversa índole.
+			El <span id="colective-mention">Colectivo Anagrama</span> es una
+			iniciativa cuyo propósito es consolidarse como un frente de
+			investigación e inovación en el desarrollo de soluciones
+			tecnológicas. Somos un grupo de programadores y matemáticos que hace
+			uso de recursos académicos y de acceso libre para poder compartir
+			ideas y proyectos que den solución a problemas de diversa índole.
 		</p>
 	</div>
 </template>
