--- a/public/templates/rss/feedItem.html
+++ b/public/templates/rss/feedItem.html
@@ -1,13 +1,13 @@
 <template>
 	<div class="feed-item">
-		<div class="feed-badge">
+		<div class="fedd-item__badge">
 			<div class="feed-badge__form">
-				<div class="feed-badge__text" ></div>
+				<div class="feed-badge__text"></div>
 			</div>
 		</div>
-		<div class="feed-detail">
+		<div class="feed-item__detail">
 			<div class="feed-title"></div>
-			<a class="feed-link" >  </a>
+			<a class="feed-link"> </a>
 			<div class="feed-description"></div>
 		</div>
 	</div>
