--- a/public/templates/rss/storyItem.html
+++ b/public/templates/rss/storyItem.html
@@ -1,19 +1,19 @@
 <template>
 	<div class="story-item">
-		<div class="story-badge">
+		<div class="story-item__badge">
 			<div class="story-badge__form"> 
-                <div class="story-badge__icon fa fa-newspaper-o fa-3x" ></div>
+                <div class="story-form__icon fa fa-newspaper-o fa-3x" ></div>
             </div>
 		</div>
-		<div class="story-detail">
-			<div class="story-title"></div>
-			<div class="story-link"></div>
-			<div class="story-meta">
-                <span class="story-author"></span>
+		<div class="story-item__detail">
+			<div class="story-detail__title"></div>
+			<div class="story-detail__link"></div>
+			<div class="story-detail__meta">
+				<span class="story-meta__author"></span>
                 &middot;
-				<span class="story-date"></span>
+				<span class="story-meta__date"></span>
 			</div>
-			<div class="story-description"></div>
+			<div class="story-detail__description"></div>
 		</div>
 	</div>
 </template>
