--- a/public/templates/sidebarContents.html
+++ b/public/templates/sidebarContents.html
@@ -1,6 +1,6 @@
 <template>
-	<div id="sidebar_home_content">
-		<ul class="sidebar-nav-list">
+	<div id="sidebar-home__content">
+		<ul class="sidebar-nav__list">
 			<li class="sidebar-item">
 				<a href="#" class="sidebar-link"
 					>A1 <i class="fa fa-free-code-camp"></i
@@ -18,8 +18,8 @@
 			</li>
 		</ul>
 	</div>
-	<div id="sidebar_notice_content">
-		<ul class="sidebar-nav-list">
+	<div id="sidebar-notice__content">
+		<ul class="sidebar-nav__list" hidden>
 			<li class="sidebar-item">
 				<a href="#" class="sidebar-link"
 					>B1 <i class="fa fa fa-newspaper-o"></i
@@ -37,8 +37,8 @@
 			</li>
 		</ul>
 	</div>
-	<div id="sidebar_projects_content">
-		<ul class="sidebar-nav-list">
+	<div id="sidebar-notice__content">
+		<ul class="sidebar-nav__list">
 			<li class="sidebar-item">
 				<a href="#" class="sidebar-link"
 					>C1 <i class="fa fa-book"></i
@@ -56,8 +56,8 @@
 			</li>
 		</ul>
 	</div>
-	<div id="sidebar_hacker_content">
-		<ul class="sidebar-nav-list">
+	<div id="sidebar-hackers__content">
+		<ul class="sidebar-nav__list">
 			<li class="sidebar-item">
 				<a href="#" class="sidebar-link"
 					>C1 <i class="fa fa-book"></i
