--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -12,10 +12,41 @@ p {
 }
 
 #main-title {
+	display: flex;
+	align-items: center;
+	height: 5rem;
+	padding: 2rem;
 	font-family: var(--title-font-family);
 	text-align: center;
-	font-size: var(--main-title-font-size);
 	color: var(--main-title-color-dark);
+
+	width: 100%;
+	min-width: 0;
+}
+
+#main-title > div {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	min-height: 2rem;
+	min-height: 2rem;
+	cursor: pointer;
+	width: 4rem;
+}
+
+.main-title__gap {
+	margin: auto;
+	min-width: 0;
+}
+
+.main-button__context {
+	border-radius: 50%;
+	max-height: 4rem;
+	display: flex;
+	align-items: center;
+	padding: 0.5rem;
+	cursor: pointer;
+	box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 #main-container {
@@ -33,9 +64,12 @@ p {
 
 #main-container__content {
 	height: 100%;
-
+	padding: 2rem;
 	overflow-y: scroll;
 	flex: 2;
+	margin-top: 2rem;
+	margin-bottom: 2rem;
+	box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 #colective-mention {
