--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -7,8 +7,16 @@ p {
 
 #main {
 	height: 100vh;
-	background-color: var(--main-background-color-dark);
 	overflow: hidden;
+	background-image: url('../media/background.png');
+	background-color: var(--main-background-color-dark);
+	background-position: center;
+}
+
+.background {
+	position: absolute;
+	height: 100%;
+	width: 100%;
 }
 
 #main-title {
@@ -69,6 +77,7 @@ p {
 	flex: 2;
 	margin-top: 2rem;
 	margin-bottom: 2rem;
+	background-color: var(--main-background-color-dark);
 	box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
