--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -9,7 +9,7 @@ p {
 	height: 100vh;
 	overflow: hidden;
 	background-image: url('../media/background.png');
-	background-color: var(--main-background-color-dark);
+	background-color: var(--dark-background);
 	background-position: center;
 }
 
@@ -26,7 +26,7 @@ p {
 	padding: 2rem;
 	font-family: var(--title-font-family);
 	text-align: center;
-	color: var(--main-title-color-dark);
+	color: var(--dark-text-content);
 
 	width: 100%;
 	min-width: 0;
@@ -63,6 +63,9 @@ p {
 
 	display: flex;
 	flex-flow: row wrap;
+
+	position: relative;
+	height: 85%;
 }
 
 #main-container__sidebar {
@@ -77,8 +80,10 @@ p {
 	flex: 2;
 	margin-top: 2rem;
 	margin-bottom: 2rem;
-	background-color: var(--main-background-color-dark);
-	box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+	background-color: var(--dark-background);
+	box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2),
+		0px 2px 2px 0px rgba(0, 0, 0, 0.14),
+		0px 3px 1px -2px rgba(0, 0, 0, 0.12);
 }
 
 #colective-mention {
@@ -90,20 +95,45 @@ p {
 	flex: 1;
 }
 
-#main-navigation__bar {
-	position: absolute;
-	font-family: var(--title-font-family);
-	color: var(--main-title-color-dark);
-	font-size: var(--small-title-font-size);
-	text-align: center;
-	padding: var(--main-navigation__bar-padding);
-	box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-	bottom: 0;
-	width: 100%;
+#main-header {
+	display: flex;
+	flex-grow: row nowrap;
+	top: 0;
+	box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2),
+		0px 2px 2px 0px rgba(0, 0, 0, 0.14),
+		0px 3px 1px -2px rgba(0, 0, 0, 0.12);
 }
 
-#main-navigation__bar > span {
-	padding: var(--main-navigation__bar-elements-padding);
+#main-header__logo {
+	flex: 3 0 8.2%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+#logo__text {
+	font: var(--text-logo);
+	color: var(--dark-headers);
+	letter-spacing: 2px;
+}
+
+#main-header__gap {
+	flex: 3 0 8.2%;
+}
+
+#main-header__menu {
+	flex: 5 0 8.2%;
+	display: flex;
+	flex-flow: row nowrap;
+
+	font-family: var(--title-font-family);
+	color: var(--dark-headers);
+	font-size: var(--small-title-font-size);
+	text-align: center;
+}
+
+#main-header__menu > span {
+	flex: 1 0 20%;
 	cursor: pointer;
 }
 
