--- a/public/styles/root.css
+++ b/public/styles/root.css
@@ -14,9 +14,11 @@
 	--main-sidebar-icon-white: #fbf9fa;
 	--main-content-color-dark: #f8f5e0;
 	--main-title-font-size: 4rem;
-	--small-title-font-size: 2rem;
+	--small-headers: 1.2rem;
 
 	--text-logo: normal small-caps 900 1.6rem 'Roboto Mono', monospace;
+
+	--elevation-2dp: 0px 1px 5px 0px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 3px 1px -2px rgba(0, 0, 0, 0.12);
 
 }
 
