--- a/public/styles/root.css
+++ b/public/styles/root.css
@@ -1,25 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&family=Source+Sans+Pro&display=swap');
 
 :root {
-	--title-font-family: 'Roboto Mono', monospace;;
+	--title-font-family: 'Roboto Mono', monospace;
 	--content-font-family: 'Source Sans Pro', sans-serif;
 
 	--dark-background: #2a2726;
 	--dark-text-content: #f8f5e0;
 	--dark-headers: #a80038;
+	--dark-blue: #00fff0;
+	--dark-green: #4ae3b5;
 
 	--main-sidebar-color-pink: #fd0054;
-	--main-sidebar-color-pis: #4ae3b5;
-	--main-sidebar-color-blue: #00fff0;
 	--main-sidebar-icon-white: #fbf9fa;
 	--main-content-color-dark: #f8f5e0;
 	--main-title-font-size: 4rem;
 	--small-headers: 1.2rem;
 
 	--text-logo: normal small-caps 900 1.6rem 'Roboto Mono', monospace;
+	--sidebar-item: normal normal 300 1rem 'Roboto Mono', monospace;
 
-	--elevation-2dp: 0px 1px 5px 0px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 3px 1px -2px rgba(0, 0, 0, 0.12);
-
+	--elevation-2dp: 0px 1px 5px 0px rgba(0, 0, 0, 0.2),
+		0px 2px 2px 0px rgba(0, 0, 0, 0.14),
+		0px 3px 1px -2px rgba(0, 0, 0, 0.12);
+	--elevation-3dp: 0 3px 4px 0 rgba(0, 0, 0, 0.14),
+		0 3px 3px -2px rgba(0, 0, 0, 0.12), 0 1px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 * {
