--- a/public/styles/root.css
+++ b/public/styles/root.css
@@ -1,10 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&family=Source+Sans+Pro&display=swap');
 
 :root {
+	/* Font-related variables */
 	--title-font-family: 'Roboto Mono', monospace;
 	--content-font-family: 'Source Sans Pro', sans-serif;
 
+	--text-logo: normal small-caps 900 1.6rem 'Roboto Mono', monospace;
+	--sidebar-item: normal normal 300 1rem 'Roboto Mono', monospace;
+
+
+	/* Material design elevation */
+	--elevation-2dp: 0px 1px 5px 0px rgba(0, 0, 0, 0.2),
+		0px 2px 2px 0px rgba(0, 0, 0, 0.14),
+		0px 3px 1px -2px rgba(0, 0, 0, 0.12);
+	--elevation-3dp: 0 3px 4px 0 rgba(0, 0, 0, 0.14),
+		0 3px 3px -2px rgba(0, 0, 0, 0.12), 0 1px 8px 0 rgba(0, 0, 0, 0.2);
+
+	/* Animations */
+	--animation-fade-in: fadeIn;
+	--fade-in-duration: 2s;
+
+	--animation-fade-in-up: fadeInUp;
+	--fade-in-up-duration: 2s;
+}
+
+/* Colors */
+:root {
+	/* Dark color theme */
 	--dark-background: #2a2726;
+	--background-color: var(--dark-background);
 	--dark-text-content: #f8f5e0;
 	--dark-headers: #a80038;
 	--dark-blue: #00fff0;
@@ -15,16 +39,9 @@
 	--main-content-color-dark: #f8f5e0;
 	--main-title-font-size: 4rem;
 	--small-headers: 1.2rem;
-
-	--text-logo: normal small-caps 900 1.6rem 'Roboto Mono', monospace;
-	--sidebar-item: normal normal 300 1rem 'Roboto Mono', monospace;
-
-	--elevation-2dp: 0px 1px 5px 0px rgba(0, 0, 0, 0.2),
-		0px 2px 2px 0px rgba(0, 0, 0, 0.14),
-		0px 3px 1px -2px rgba(0, 0, 0, 0.12);
-	--elevation-3dp: 0 3px 4px 0 rgba(0, 0, 0, 0.14),
-		0 3px 3px -2px rgba(0, 0, 0, 0.12), 0 1px 8px 0 rgba(0, 0, 0, 0.2);
 }
+
+:root 
 
 * {
 	/* Avoid size calculation based on margins and padding */
@@ -49,7 +66,27 @@ html {
 :focus {
 	outline: none;
 }
-
 ::-moz-focus-inner {
 	border: 0;
+}
+
+@keyframes fadeIn {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
+@keyframes fadeInUp {
+	from {
+		transform: translate3d(0, 40px, 0);
+		opacity: 0;
+	}
+
+	to {
+		transform: translate3d(0, 0, 0);
+		opacity: 1;
+	}
 }
