--- a/public/styles/root.css
+++ b/public/styles/root.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&family=Source+Sans+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=Roboto+Mono:wght@500&display=swap');
 
 :root {
 	/* Font-related variables */
 	--title-font-family: 'Roboto Mono', monospace;
-	--content-font-family: 'Source Sans Pro', sans-serif;
+	--content-font-family: 'PT Sans', sans-serif;
 
 	--text-logo: normal small-caps 900 1.6rem 'Roboto Mono', monospace;
 	--sidebar-item: normal normal 300 1rem 'Roboto Mono', monospace;
