--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -3,7 +3,7 @@
 	overflow: hidden;
 	background-color: var(--dark-background);
 	background-position: center;
-	background-image: url('../media/background.jpg'); ;
+	background-image: url('../media/math.jpg'); ;
 	background-position: center;
 	background-blend-mode: overlay;
 	animation: var(--animation-fade-in) 1s;
