--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -64,11 +64,20 @@
 	height: 100%;
 }
 
+#main-content__home {
+	scroll-behavior: smooth;
+	height: 100%;
+	overflow-y: scroll;
+}
+
+
 #main-container__sidebar {
 	flex: 1;
 	margin-right: 1rem;
 	padding: 2rem;
 	animation: var(--animation-fade-in) 1s;
+	position: relative;
+	height: 90%;
 }
 
 #main-container__content {
@@ -80,7 +89,7 @@
 	max-height: 90%;
 }
 
-#colective-mention {
+.colective-mention {
 	color: var(--main-sidebar-color-pink);
 }
 
@@ -199,7 +208,7 @@
 
 
 p {
-	text-align: justify;
+	text-align: center;
 	text-justify: inter-word;
 	line-height: 2;
 	letter-spacing: 1px;
@@ -210,4 +219,9 @@ p {
 	padding: 5rem;
 	font-size: 2.5rem;
 	text-align: center;
+	height: 95%;
+}
+
+.colective-bold {
+	color: var(--dark-blue);
 }
