--- a/public/templates/hackersContent.html
+++ b/public/templates/hackersContent.html
@@ -1,7 +1,6 @@
 <template>
 	<div id="main_content_hackers">
-		<h1>github</h1>
-		<button id="btnRepos">Repos</button>
-        <div id="divResult"></div>
+		<div id="app"></div>
+		<script src="../modules/github.js"></script>
     </div>
 </template>
